--- a/public/index.html
+++ b/public/index.html
@@ -177,7 +177,7 @@
       <!-- TOP BANNER -->
       <section>
         <div class="container my-4 d-none d-sm-block bg">
-          <img class="bg-img" src="./assets/title/bitmap.png" alt="">
+          <!-- <img class="bg-img" src="./assets/title/bitmap.png" alt=""> -->
           <div class="bg-green"></div>
           <div class="bg-text">
             <h1 class="bg-text-h1">ОТ НОВИЧКА ДО ПРОФИ</h1>
